remove overflow scroll bar bug on code pre blocks

--- a/site/styles/base/code.styl
+++ b/site/styles/base/code.styl
@@ -14,6 +14,5 @@ pre
 
 code.hljs
   pad()
-  overflow-x scroll
   white-space pre-wrap
   word-break normal
